[package]
name = "tendies"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tendies"
path = "src/main.rs"

[lib]
name = "tendies"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
regex = "1.11.0"
rgb = "0.8.50"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
termion = "4.0.3"
textplots = "0.8.6"
tokio = { version = "1", features = ["full"] }
yahoo_finance_api = "2.3.0"
zstd = "0.13.2"
